test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/inline_attr.sw
library;

struct S { }

impl S {
    #[inline(always)]
    fn ok_1() { }

    #[inline]
    #[inline()]
    #[inline(always, never)]
    fn not_ok() { }
}